# LLuMinary

./: .coverage  .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENT_NOTES.md  BACKLOG_IMPLEMENTATION_REPORT.md  BACKLOG_UPDATES.md  BUILD_RELEASE.md  CHANGELOG.md  CI_CD_SUMMARY.md  CI_FIX_PLAN.md  CLAUDE.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile.matrix  Dockerfile.test  ENHANCEMENT_PLAN.md  GOOGLE_PROVIDER_TESTS_SUMMARY.md  GOOGLE_PROVIDER_TEST_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  PACKAGE_STRUCTURE_REFINEMENT.md  PROVIDER_TEMPLATE_TESTS_SUMMARY.md  README.md  ROADMAP.md  api.html  app.py  arithmetic_fixes_summary.md  bedrock_fixed.py  bedrock_type_fixes_summary.md  check_providers.py  check_unreachable.py  clean_base.py  cleanup_package.py  cohere_provider_progress.md  coverage.xml  debug_bedrock.py  debug_generation_test.py  (+61 more)
.cursor/: github_api_helpers.sh  settings.json
.github/: CODEOWNERS  GITHUB_ISSUES_REFACTORING_REPORT.md  codecov.yml  github_best_practices.md
.github/scripts/: README.md  check_codecov.sh  rebuild_github_project.py  refactor_github_issues.sh  setup_github_issues.sh  verify_workflows.sh
.github/workflows/: README.md  ci.yml  codeql.yml  direct-to-main-pr.yml  docker-tests.yml  docs.yml  matrix-docker-tests.yml  pr.yml  publish.yml  release.yml  version.yml
_modules/: index.html
_modules/lluminary/: exceptions.html  handler.html
_sources/: api.rst.txt  quickstart.rst.txt
_sources/providers/: anthropic.rst.txt  openai.rst.txt
debug/: README.md  debug_bedrock.py  debug_generation_test.py  debug_google.py  debug_message_test.py  debug_openai.py  debug_router.py  debug_test.py  debug_tools_test.py  debug_type_validator.py  debug_union_test.py  test.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  DOCUMENTATION_STANDARDIZATION.md  DOCUMENTATION_STANDARDS.md  Makefile  PROJECT_HISTORY.md  README.md  STANDARDIZATION_PLAN.md  STANDARDIZATION_SUMMARY.md  TEST_COVERAGE.md  TUTORIALS.md  UPDATED_COMPONENTS.md
docs/development/: ANTHROPIC_ERROR_HANDLING_IMPLEMENTATION.md  AWS_MOCKING_EXAMPLES.md  BEDROCK_ERROR_HANDLING_IMPLEMENTATION.md  COHERE_PROVIDER_PROGRESS.md  COHERE_PROVIDER_TESTING_SUMMARY.md  ERROR_HANDLING.md  ERROR_HANDLING_BEST_PRACTICES.md  ERROR_HANDLING_IMPLEMENTATION_PLAN.md  ERROR_HANDLING_SUMMARY.md  ERROR_HANDLING_TEST_EXAMPLE.py  ERROR_MAPPING_GUIDE.md  GOOGLE_ERROR_HANDLING_IMPLEMENTATION.md  GOOGLE_PROVIDER_ERROR_HANDLING_SUMMARY.md  GOOGLE_PROVIDER_TEST_PROGRESS.md  IMPLEMENTATION_NOTES.md  MODELS.md  OPENAI_ERROR_HANDLING_EXAMPLE.py  OPENAI_ERROR_HANDLING_IMPLEMENTATION.md  PROVIDER_TESTING.md  TYPE_CHECKING_PROGRESS.md
docs/source/: conf.py  index.rst  installation.rst  models_reference.rst  providers.rst
examples/: advanced_features.py  basic_usage.py  bedrock_example.py  document_reranking.py  image_processing.py  metrics_example.py  reranking_example.py  streaming_example.py  thinking_budget.py
examples/lluminary-chat-demo/: package-lock.json  package.json  requirements.txt  tsconfig.json
lluminary-chat-demo/: README.md  server.py  tailwind.config.js
lluminary-chat-demo/src/: App.tsx
providers/: anthropic.html  bedrock.html  cohere.html  google.html  openai.html
src/llmhandler/: __init__.py  exceptions.py  handler.py
src/llmhandler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/lluminary/: README.md  __init__.py  exceptions.py  handler.py  version.py
tests/: README.md  conftest.py
tests/integration/: INTEGRATION_PROGRESS.md  INTEGRATION_TESTS.md  README.md  completion_report.md  test_advanced_features.py  test_advanced_features_extended.py  test_classification.py  test_cli_integration.py  test_cost_tracking.py  test_cross_provider_integration.py  test_dynamic_model_selection.py  test_embeddings.py  test_generate.py  test_image_generation.py  test_images.py  test_optional_parameters.py  test_provider_errors.py  test_rate_limiting.py  test_reranking.py  test_streaming_integration.py  test_tool_registry_integration.py
tests/test_data/: example_test.py
tests/unit/: cohere_provider_testing_summary.md  minimal_test.py  new_openai_tests.py  simple_openai_test.py  simple_test.py  test_anthropic_auth.py  test_anthropic_embeddings.py  test_anthropic_error_handling.py  test_anthropic_function_calling.py  test_anthropic_image_processing.py  test_anthropic_provider.py  test_anthropic_streaming.py  test_anthropic_thinking_budget.py  test_anthropic_timeout.py  test_auth.py  test_aws_utils.py  test_base_llm.py  test_bedrock_aws_authentication.py  test_bedrock_error_handling.py  test_bedrock_error_mapping.py  test_bedrock_provider.py  test_bedrock_provider_fixed.py  test_bedrock_provider_merged.py  test_bedrock_retry_debug.py  test_bedrock_type_safety.py  test_capabilities.py  test_classification_cli.py  test_classification_config.py  test_classification_validators.py  test_classifier.py  test_cli_classify.py  test_cohere_aws.py  test_embed_method.py  (+65 more)
workspace/: IMPLEMENTATION_PLAN.md
(+143 files in other folders)
